   This is now detected and writeBin() is used as fallback for outputting.
   For details, see R-devel thread
   https://stat.ethz.ch/pipermail/r-devel/2017-January/073571.html.

 * RspRSourceCodeFactory did not preserve '\unnnn' encoded UTF-8 characters
   (they where turned into "<U+NNNN>" strings).

 * rcode() would sometimes return NULL.
 
DEPRECATED AND DEFUNCT:

  * Attribute 'verbatim' for RSP 'include' preprocessing directives is defunct.
    Use attribute 'type' instead.


Version: 0.40.0 [2016-12-05]

SIGNIFICANT CHANGES:

 * All vignette formats now output a tangle file even if empty. For example, in
   the past *.asis and *.ltx vignettes would not generate *.R tangle files,
   whereas now they generate "empty" ones (R CMD build drops such "empty"
   tangle R files but that is a different story).  This was done in order to
   hotfix / workaround PR #17185
   (https://bugs.r-project.org/bugzilla/show_bug.cgi?id=17185)

SOFTWARE QUALITY:

 * ROBUSTNESS: findAsciiDoc() and findPandoc() is more liberal when trying to
   infer and parse the version of the executable and if they still fail they
   give more informative error messages.

DEPRECATED AND DEFUNCT:

 * Deprecated RSP engine v0.1.0 is now defunct.

 * Made deprecated methods defunct.
 
 
Version: 0.30.0 [2016-05-15]

SIGNIFICANT CHANGES:

 * CLEANUP: Renamed exec/ script 'rsource(.bat)' to 'rcode(.bat)'.

SOFTWARE QUALITY:

 * WORKAROUND: knitr::pandoc() in knitr (>= 1.13) appends '_utf8' to output
   HTML filename (to the part before the extension). This caused one of the
   vignette engines to fail.  Now '_utf8' is dropped from the HTML filename
   if this is detected.

DEPRECATED AND DEFUNCT:

 * Deprecated several methods that was part of the old API, e.g. compileRsp(),
   sourceRsp(), translateRsp() etc.

 * Removed epsDev(), which has been defunct since R.rsp 0.19.7 (Jan 2015).

 * Workaround for markdown (<= 0.5.4) (Jan 2013) removed.


 
Version: 0.21.0 [2015-12-18]

SIGNIFICANT CHANGES:
