@@ -6,6 +6,5 @@ rclean <- CmdArgsFunction(rclean)
 rcode <- CmdArgsFunction(rcode)
 rcompile <- CmdArgsFunction(rcompile)
 rfile <- CmdArgsFunction(rfile)
-rscript <- CmdArgsFunction(rscript)
 rsource <- CmdArgsFunction(rsource)
 rstring <- CmdArgsFunction(rstring)
