@@ -62,7 +62,7 @@
 \section{How to cite this package}{
  Bengtsson H (2016).
 \emph{R.rsp: Dynamic Generation of Scientific Reports}.
-R package version 0.40.0, \url{https://CRAN.R-project.org/package=R.rsp}.
+R package version 0.40.0-9000, \url{https://github.com/HenrikBengtsson/R.rsp}.
 }
 
 \author{Henrik Bengtsson}
